--- a/css/style.css
+++ b/css/style.css
@@ -2,27 +2,28 @@
     box-sizing: border-box;
   }
 
-  header {
-      background-color: aqua;
-      font-size: 50px;
-      width: 100%;
-      height: 50px;
-      text-align: center;
+header {
+    background-color: aqua;
+    font-size: 50px;
+    width: 100%;
+    height: 50px;
+    text-align: center;
       
   }
 
-#cellBlock{
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: repeat(3, 1fr);
+td {
+    border: 2px solid #333;
+    height: 100px;
+    width: 100px;
+    text-align: center;
+    vertical-align: middle; 
+    cursor: pointer;
 }
 
-.cell{
-    padding: 50px;
-    background-color: black;
-    color: red;
-}
-
-body{
-    background-color: purple;
+table {
+    border-collapse: collapse;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -155px;
 }
